--- a/src/global.css
+++ b/src/global.css
@@ -1,3 +1,7 @@
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
 html {
 	-webkit-text-size-adjust: 100%;
 	-moz-tab-size: 4;
