--- a/src/global.less
+++ b/src/global.less
@@ -1,6 +1,6 @@
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 html {
 	-webkit-text-size-adjust: 100%;
